k8/client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: flask-blog-client
    namespace: default
spec:
    selector:
        matchLabels:
            name: flask-blog-client
    replicas: 2 # tells deployment to run 2 pods matching the template
    template: # create pods using pod definition in this template
        metadata:
            # unlike pod.yaml, the name is not included in the meta data as a unique name is
            # generated from the deployment name
            labels:
                name: flask-blog-client
        spec:
            containers:
                - name: flask-blog-client
                  image: sjkchang/flask-blog-client:latest # Image Name
                  ports:
                      - containerPort: 5000 # Port Number EX. 5000
