k8/client/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: flask-blog-client-service
    namespace: default
spec:
    type: NodePort
    ports:
        - port: 5000
          targetPort: 5000
    selector:
        name: flask-blog-client
